--- a/www/index.html
+++ b/www/index.html
@@ -94,22 +94,20 @@
 
 			<div class="col-xs-12 col-md-7 col-lg-7 ">
 				<div class="dates col-dates">
-				<h2>May 19 - June 10, 2020<br>
+				<h2>Opening April 25 - May 17, 2020<br>
 				Kellogg University Art Gallery</h2><br>
 
 				<h3>Industry Day</h3>
 				<p >Sat. Apr. 25, 12-4pm </p><br>
 
 
-				<h3 >2D3D Juried Art Exhibition</h3>
-				<p >Mon. Apr. 27, 6-8pm <br> Awards Announced at 7pm </p>
+				<h3 >2D3D+ Juried Art Exhibition</h3>
+				<p >Sat. Apr. 25 - May 17 <br>Opening Reception Mon. Apr. 27, 6-8pm <br> Awards Announced at 7pm </p>
 				<p ></p><br>
-				<h3>Family Night</h3>
-				<p > Fri. May 15, 12-4pm <br> (Commencement: 8 -10pm )</p>
 					
 				<br>
 				<h3> Family Weekend</h3>
-				<p >Sat./Sun. May 16 & 17, 12-4pm  </p>
+				<p >Sat./Sun. May 16 & 17, 12-4pm <br>Sat. May 16 (Pre-Commencement) 4-6pm <br> (Commencement: 7-9pm) </p>
 
 				</div>
 
