update hello testing

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Poly-Kroma 2020 hi</title>
+		<title>Poly-Kroma 2020 hello</title>
 		<meta name="description" content="Poly-Kroma" />
 		<meta name="description" content="Poly-Kroma 2020, 
  		is the annual art and design exhibition that features the talented work of art students and   graduating seniors of Cal Poly Pomon"/>
