--- a/www/index.html
+++ b/www/index.html
@@ -386,7 +386,7 @@
 				
 				<div class="row row-designers">
 					<div class="col-6 col-md-3">
-						<a target="_blank"href=""> <img src ="img/pk_2020/pk_shelby_georgeovich_1.jpg" width="100%"> 
+						<a target="_blank"href="https://www.sgeorgeovich.myportfolio.com/"> <img src ="img/pk_2020/pk_shelby_georgeovich_1.jpg" width="100%"> 
 						<p id="name"> Shelby Georgeovich</p> </a>
 					</div>
 					<div class="col-6 col-md-3">
